# BitSatRelay-Discord-Bot

./: .gitignore  LICENSE  QUICKSTART.md  README.md  config.json  crud.py  manifest.json  migrations.py  pyproject.toml  tasks.py  views.py  views_api.py
bitsatcredit_discord/: __init__.py  config.json  config.py  helpers.py  models.py  services.py  tasks.py  views.py
static/image/: .gitkeep
static/js/: index.js
templates/bitsatcredit_discord/: index.html
